--- a/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
+++ b/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
@@ -1,7 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/GlobalStyleSheet.uss?fileID=7433441132597879392&amp;guid=9a263fc98d1316240ba4fa5a4fe0e162&amp;type=3#GlobalStyleSheet" />
-    <ui:VisualElement name="player-info-container" style="flex-grow: 1; position: absolute; height: 100px; width: 500px; top: 886px; left: 707px;">
-        <ui:VisualElement name="healthbar" style="flex-grow: 1; flex-wrap: nowrap;">
+    <ui:VisualElement name="player-info-container" style="position: absolute; height: 138px; width: 443px; top: 920px; left: 479px; flex-direction: row;">
+        <ui:VisualElement name="heal-potion" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/HealPotion-removebg-preview.png?fileID=2800000&amp;guid=9a8b3d40060271446874793b388c1cb9&amp;type=3#HealPotion-removebg-preview&quot;); margin-right: 30px; justify-content: flex-end; width: -139px; top: -30px;">
+            <ui:Label tabindex="-1" text="0" parse-escape-sequences="true" display-tooltip-when-elided="true" name="potions-count" style="align-self: flex-end; font-size: 50px; -unity-font-style: bold; -unity-text-align: upper-center;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="healthbar" style="flex-grow: 1; flex-wrap: nowrap; height: 101px; width: 52px;">
             <ui:Label tabindex="-1" text="health-amount" parse-escape-sequences="true" display-tooltip-when-elided="true" name="health-amount" style="background-color: rgb(55, 255, 0); height: 95px; width: 493px; -unity-text-align: middle-center; font-size: 50px; -unity-font-style: bold;" />
         </ui:VisualElement>
     </ui:VisualElement>
