--- a/Dungeon Adventures/Assets/UI/GlobalStyleSheet.uss
+++ b/Dungeon Adventures/Assets/UI/GlobalStyleSheet.uss
@@ -1,3 +1,53 @@
 .low-tint {
     -unity-background-image-tint-color: rgba(255, 255, 255, 0.16);
 }
+
+.common-text {
+    -unity-text-align: middle-center;
+    font-size: 50px;
+    -unity-font-style: bold;
+    -unity-text-outline-color: rgb(0, 0, 0);
+    -unity-text-outline-width: 2px;
+    color: rgb(255, 255, 255);
+    -unity-font: initial;
+}
+
+.menu-button {
+    background-color: rgb(78, 255, 234);
+    border-left-color: rgb(78, 255, 234);
+    border-right-color: rgb(78, 255, 234);
+    border-top-color: rgb(78, 255, 234);
+    border-bottom-color: rgb(78, 255, 234);
+    border-top-width: 15px;
+    border-right-width: 15px;
+    border-bottom-width: 15px;
+    border-left-width: 15px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    width: 320px;
+    height: 125px;
+    font-size: 40px;
+    -unity-font-style: bold;
+    -unity-text-align: middle-center;
+    color: rgb(255, 255, 255);
+    -unity-text-outline-width: 2px;
+    -unity-text-outline-color: rgb(0, 0, 0);
+}
+
+.active {
+    background-color: rgb(247, 255, 0);
+    border-left-color: rgb(247, 255, 0);
+    border-right-color: rgb(247, 255, 0);
+    border-top-color: rgb(247, 255, 0);
+    border-bottom-color: rgb(247, 255, 0);
+    border-top-width: 15px;
+    border-right-width: 15px;
+    border-bottom-width: 15px;
+    border-left-width: 15px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
