--- a/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
+++ b/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
@@ -1,6 +1,14 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/GlobalStyleSheet.uss?fileID=7433441132597879392&amp;guid=9a263fc98d1316240ba4fa5a4fe0e162&amp;type=3#GlobalStyleSheet" />
-    <ui:VisualElement name="player-info-container" style="position: absolute; height: 138px; width: 411px; top: 920px; left: 527px; flex-direction: row;">
+    <ui:VisualElement name="main-menu-container" style="flex-grow: 1; display: flex;">
+        <ui:VisualElement name="box" style="flex-grow: 1; flex-wrap: wrap;">
+            <ui:Label tabindex="-1" text="Dungeon Adventures" parse-escape-sequences="true" display-tooltip-when-elided="true" class="common-text" style="font-size: 77px; top: 126px;" />
+            <ui:VisualElement name="buttons" style="flex-grow: 1; align-items: center; justify-content: center; top: 80px; position: absolute; width: 1926px; height: 1004px;">
+                <ui:Button text="Start" parse-escape-sequences="true" display-tooltip-when-elided="true" name="start-button" class="menu-button" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="player-info-container" style="position: absolute; height: 138px; width: 411px; top: 920px; left: 527px; flex-direction: row; display: none;">
         <ui:VisualElement name="heal-potion" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/HealPotion-removebg-preview.png?fileID=2800000&amp;guid=9a8b3d40060271446874793b388c1cb9&amp;type=3#HealPotion-removebg-preview&quot;); margin-right: 30px; justify-content: flex-end; width: -139px; top: -30px;">
             <ui:Label tabindex="-1" text="0" parse-escape-sequences="true" display-tooltip-when-elided="true" name="potions-count" style="align-self: flex-end; font-size: 50px; -unity-font-style: bold; -unity-text-align: upper-center;" />
         </ui:VisualElement>
@@ -9,7 +17,7 @@
         </ui:VisualElement>
         <ui:VisualElement name="key" style="flex-grow: 1; left: -465px; height: 93px; width: -5px;" />
     </ui:VisualElement>
-    <ui:VisualElement name="player-ability-container" style="flex-grow: 1; left: 1004px; position: absolute; height: 378px; width: 779px; top: 750px; display: flex; background-color: rgba(0, 0, 0, 0);">
+    <ui:VisualElement name="player-ability-container" style="flex-grow: 1; left: 1004px; position: absolute; height: 378px; width: 779px; top: 750px; display: none; background-color: rgba(0, 0, 0, 0);">
         <ui:VisualElement name="player-ability-icon" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Sprites/playerAbilityIcon-removebg-preview.png?fileID=2800000&amp;guid=86710b9d81995ad42b3a822241ccbaa1&amp;type=3#playerAbilityIcon-removebg-preview&quot;);" />
     </ui:VisualElement>
 </ui:UXML>
