--- a/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
+++ b/Dungeon Adventures/Assets/UI/MainMenuTemplate.uxml
@@ -20,5 +20,8 @@
     <ui:VisualElement name="player-ability-container" style="display: none; flex-wrap: wrap; align-items: center; flex-direction: row; justify-content: center; align-self: center; width: 45%; height: 30%; left: 30%; top: 55%;">
         <ui:VisualElement name="player-ability-icon" style="background-image: url(&quot;project://database/Assets/Sprites/playerAbilityIcon-removebg-preview.png?fileID=2800000&amp;guid=86710b9d81995ad42b3a822241ccbaa1&amp;type=3#playerAbilityIcon-removebg-preview&quot;); background-color: rgba(0, 0, 0, 0); height: 100%; width: 100%;" />
     </ui:VisualElement>
+    <ui:VisualElement name="exit-container" style="flex-grow: 1; flex-direction: row; flex-wrap: wrap; justify-content: center; display: none;">
+        <ui:Button text="Exit" parse-escape-sequences="true" display-tooltip-when-elided="true" name="exit-button" class="menu-button" style="top: 15%;" />
+    </ui:VisualElement>
     <ui:Label tabindex="-1" text="You should find a key" parse-escape-sequences="true" display-tooltip-when-elided="true" name="key-not-found-message" style="font-size: 70px; -unity-font-style: bold; -unity-text-align: middle-center; color: rgb(255, 167, 0); display: none; top: 15%;" />
 </ui:UXML>
