оновив Ui . Але кнопка "Menu" не працює

--- a/Dungeon Adventures/Assets/UI/GlobalStyleSheet.uss
+++ b/Dungeon Adventures/Assets/UI/GlobalStyleSheet.uss
@@ -34,6 +34,7 @@
     color: rgb(255, 255, 255);
     -unity-text-outline-width: 2px;
     -unity-text-outline-color: rgb(0, 0, 0);
+    margin-bottom: 25px;
 }
 
 .active {
